Fixed Overlap of Image & About Us on Home
Added link abilities to button to take to about us page. Added css and hide image to prevent it overlapping buttons on smaller screens.

--- a/frontend/src/css/HomePage.css
+++ b/frontend/src/css/HomePage.css
@@ -192,3 +192,10 @@ body {
     padding: 10px;
     text-align: center;
 }
+
+/* Hides the image so no overlapping of buttons occur on smaller screens*/
+@media (max-width: 700px), (max-height: 700px) {
+    .hidden-on-small-screen {
+        display: none;
+    }
+}
